# instarf

./: .clang-format  .gitignore  CMakeLists.txt  README.md
assets/shaders/: color.frag  color.vert  tensor_vm.comp
cmake/: FindVulkan.cmake
include/instarf/: application.h  attachment.h  buffer.h  camera.h  compute_pipeline.h  descriptor.h  descriptor_layout.h  device.h  engine.h  framebuffer.h  graphics_pipeline.h  instance.h  pipeline_layout.h  render_pass.h  render_pass_ui.h  swapchain.h  uniform_buffer.h
include/instarf/gpu/: attachment.h  buffer.h  compute_pipeline.h  descriptor.h  descriptor_layout.h  device.h  framebuffer.h  graphics_pipeline.h  instance.h  pipeline_layout.h  render_pass.h  render_pass_ui.h  swapchain.h  uniform_buffer.h
include/instarf/shader/: camera_ubo.h
src/: main.cc
src/instarf/: application.cc  attachment.cc  buffer.cc  camera.cc  compute_pipeline.cc  descriptor.cc  descriptor_layout.cc  device.cc  engine.cc  framebuffer.cc  graphics_pipeline.cc  instance.cc  pipeline_layout.cc  render_pass.cc  render_pass_ui.cc  swapchain.cc  uniform_buffer.cc
src/instarf/detail/: shader_module.cc  shader_module.h
src/instarf/gpu/: attachment.cc  buffer.cc  compute_pipeline.cc  descriptor.cc  descriptor_layout.cc  device.cc  framebuffer.cc  graphics_pipeline.cc  instance.cc  pipeline_layout.cc  render_pass.cc  render_pass_ui.cc  swapchain.cc  uniform_buffer.cc
src/instarf/gpu/detail/: shader_module.cc  shader_module.h
